# port-harbour

./: .gitignore  LICENSE  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: demo.md  demo.tape
rust/: Cargo.toml
rust/src/: app.rs  main.rs  palette.rs  scan.rs  ui.rs
src/: dockerScanner.ts  extension.ts
webview-ui/: index.html  package-lock.json  package.json  vite.config.ts
webview-ui/src/: App.tsx  Harbor.tsx  Sidebar.tsx  audio.ts  main.tsx  types.ts  vscode.ts
